TRiAS/Framework/LeadTools/Include/Ltann.h


/*
   object types
*/
typedef enum tagANNOBJECTTYPE 
{
   ANNOBJECT_CONTAINER = 0,
   ANNOBJECT_POINTER = 1,
   ANNOBJECT_AUDIO = 2,
   ANNOBJECT_BUTTON = 3,
   ANNOBJECT_ELLIPSE = 4,
   ANNOBJECT_FREEHAND = 5,
   ANNOBJECT_HILITE = 6,
   ANNOBJECT_HOTSPOT = 7,
   ANNOBJECT_LINE = 8,
   ANNOBJECT_NOTE = 9,
   ANNOBJECT_POLYGON = 10,
   ANNOBJECT_POLYLINE = 11,
   ANNOBJECT_RECT = 12,
   ANNOBJECT_REDACT = 13,
   ANNOBJECT_STAMP = 14,
   ANNOBJECT_TEXT = 15,
   ANNOBJECT_AUTOMATION = 16,
   ANNOBJECT_RULER = 17,
   ANNOBJECT_CROSSPRODUCT = 18,
   ANNOBJECT_POINT = 19,
   ANNOBJECT_PROTRACTOR = 20,
   ANNOBJECT_VIDEO = 21,
   ANNOBJECT_PUSHPIN = 22,
   ANNOBJECT_FREEHANDHOTSPOT = 23,

   ANNOBJECT_LAST,            // last automation object defined
} ANNOBJECTTYPE, L_FAR*pANNOBJECTTYPE;

/*
   automation text items
*/
enum {
/*
   automation menu text
*/
   ANNAUTOTEXT_MENU_UNDO,
   ANNAUTOTEXT_MENU_CUT,
   ANNAUTOTEXT_MENU_COPY,
   ANNAUTOTEXT_MENU_PASTE,
   ANNAUTOTEXT_MENU_DELETE,
   ANNAUTOTEXT_MENU_SELECTALL,
   ANNAUTOTEXT_MENU_BRINGTOFRONT,
   ANNAUTOTEXT_MENU_SENDTOBACK,
   ANNAUTOTEXT_MENU_DEFAULTPROPERTIES,
   ANNAUTOTEXT_MENU_SELECTEDPROPERTIES,
   ANNAUTOTEXT_MENU_CONTAINERPROPERTIES,
   ANNAUTOTEXT_MENU_POINTERPROPERTIES,
   ANNAUTOTEXT_MENU_AUDIOPROPERTIES,
   ANNAUTOTEXT_MENU_BUTTONPROPERTIES,
   ANNAUTOTEXT_MENU_ELLIPSEPROPERTIES,
   ANNAUTOTEXT_MENU_FREEHANDPROPERTIES,
   ANNAUTOTEXT_MENU_HILITEPROPERTIES,
   ANNAUTOTEXT_MENU_HOTSPOTPROPERTIES,
   ANNAUTOTEXT_MENU_LINEPROPERTIES,
   ANNAUTOTEXT_MENU_NOTEPROPERTIES,
   ANNAUTOTEXT_MENU_POLYGONPROPERTIES,
   ANNAUTOTEXT_MENU_POLYLINEPROPERTIES,
   ANNAUTOTEXT_MENU_RECTANGLEPROPERTIES,
   ANNAUTOTEXT_MENU_REDACTPROPERTIES,
   ANNAUTOTEXT_MENU_STAMPPROPERTIES,
   ANNAUTOTEXT_MENU_TEXTPROPERTIES,
   ANNAUTOTEXT_MENU_AUTOMATIONPROPERTIES,
   ANNAUTOTEXT_MENU_RULERPROPERTIES,
   ANNAUTOTEXT_MENU_CROSSPRODUCTPROPERTIES,
   ANNAUTOTEXT_MENU_POINTPROPERTIES,
   ANNAUTOTEXT_MENU_PROTRACTORPROPERTIES,
   ANNAUTOTEXT_MENU_VIDEOPROPERTIES,
   ANNAUTOTEXT_MENU_PUSHPINPROPERTIES,
   ANNAUTOTEXT_MENU_FREEHANDHOSPOTPROPERTIES,

   ANNAUTOTEXT_MENU_LINE,
   ANNAUTOTEXT_MENU_FILL,
   ANNAUTOTEXT_MENU_FOREGROUNDCOLOR,
   ANNAUTOTEXT_MENU_BACKGROUNDCOLOR,
   ANNAUTOTEXT_MENU_FONT,
   ANNAUTOTEXT_MENU_BITMAP,
   ANNAUTOTEXT_MENU_TEXT,
   ANNAUTOTEXT_MENU_FILE,
   ANNAUTOTEXT_MENU_ROP2,
   ANNAUTOTEXT_MENU_TRANSPARENT,
   ANNAUTOTEXT_MENU_LOCK,
   ANNAUTOTEXT_MENU_UNLOCK,
   ANNAUTOTEXT_MENU_LOCKALL,
   ANNAUTOTEXT_MENU_UNLOCKALL,
   ANNAUTOTEXT_MENU_HYPERLINK,
   ANNAUTOTEXT_MENU_NOTEBACKGROUNDCOLOR,
   ANNAUTOTEXT_MENU_REDACTBACKGROUNDCOLOR,
   ANNAUTOTEXT_MENU_HILITEBACKGROUNDCOLOR,
   ANNAUTOTEXT_MENU_HOTSPOTMETAFILE,
   ANNAUTOTEXT_MENU_RULER,

   ANNAUTOTEXT_MENU_BUTTONFONT,
   ANNAUTOTEXT_MENU_GROUP,
   ANNAUTOTEXT_MENU_UNGROUP,
   ANNAUTOTEXT_MENU_NODES,
   ANNAUTOTEXT_MENU_PROTRACTOR,
   ANNAUTOTEXT_MENU_NAME,

   ANNAUTOTEXT_MENU_METAFILE,
   ANNAUTOTEXT_MENU_SECONDARYFILE,
   ANNAUTOTEXT_MENU_TRANSPARENTCOLOR,
   ANNAUTOTEXT_MENU_DELETENODE,
   ANNAUTOTEXT_MENU_ADDNODE,
   ANNAUTOTEXT_MENU_CAPTURE,

/*
   toolbar rubber stamps menu text
*/
   ANNAUTOTEXT_MENU_STAMP_APPROVED,
   ANNAUTOTEXT_MENU_STAMP_ASSIGNED,
   ANNAUTOTEXT_MENU_STAMP_CHECKED,
   ANNAUTOTEXT_MENU_STAMP_CLATPRV,
   ANNAUTOTEXT_MENU_STAMP_COPY,
   ANNAUTOTEXT_MENU_STAMP_DRAFT,
   ANNAUTOTEXT_MENU_STAMP_EXTENDED,
   ANNAUTOTEXT_MENU_STAMP_FAX,
   ANNAUTOTEXT_MENU_STAMP_FAXED,
   ANNAUTOTEXT_MENU_STAMP_IMPORTANT,
   ANNAUTOTEXT_MENU_STAMP_INVOICE,
   ANNAUTOTEXT_MENU_STAMP_NOTICE,
   ANNAUTOTEXT_MENU_STAMP_OFFICIAL,
   ANNAUTOTEXT_MENU_STAMP_ONFILE,
   ANNAUTOTEXT_MENU_STAMP_PAID,
   ANNAUTOTEXT_MENU_STAMP_PASSED,
   ANNAUTOTEXT_MENU_STAMP_PENDING,
   ANNAUTOTEXT_MENU_STAMP_PROCESSED,
   ANNAUTOTEXT_MENU_STAMP_RECEIVED,
   ANNAUTOTEXT_MENU_STAMP_REJECTED,
   ANNAUTOTEXT_MENU_STAMP_RELEASE,
   ANNAUTOTEXT_MENU_STAMP_SENT,
   ANNAUTOTEXT_MENU_STAMP_SHIPPED,
   ANNAUTOTEXT_MENU_STAMP_TOPSECRET,
   ANNAUTOTEXT_MENU_STAMP_URGENT,
   ANNAUTOTEXT_MENU_STAMP_VOID,

/*
   automation line dialog text
*/
   ANNAUTOTEXT_LINE_CAPTION,
   ANNAUTOTEXT_LINE_WIDTH,
   ANNAUTOTEXT_LINE_STYLE,
   ANNAUTOTEXT_LINE_OK,
   ANNAUTOTEXT_LINE_CANCEL,
   ANNAUTOTEXT_LINE_APPLY,

   ANNAUTOTEXT_LINE_SOLID,
   ANNAUTOTEXT_LINE_DASH,
   ANNAUTOTEXT_LINE_DOT,
   ANNAUTOTEXT_LINE_DASHDOT,
   ANNAUTOTEXT_LINE_DASHDOTDOT,
   ANNAUTOTEXT_LINE_NULL,

/*
   automation fill dialog text
*/
   ANNAUTOTEXT_FILL_CAPTION,
   ANNAUTOTEXT_FILL_MODE,
   ANNAUTOTEXT_FILL_PATTERNS,
   ANNAUTOTEXT_FILL_POLYGON,
   ANNAUTOTEXT_FILL_OK,
   ANNAUTOTEXT_FILL_CANCEL,
   ANNAUTOTEXT_FILL_APPLY,

   ANNAUTOTEXT_FILL_TRANSPARENT,
   ANNAUTOTEXT_FILL_TRANSLUCENT,
   ANNAUTOTEXT_FILL_OPAQUE,

   ANNAUTOTEXT_FILL_SOLID,
   ANNAUTOTEXT_FILL_BACKWARDDIAGONAL,
   ANNAUTOTEXT_FILL_CROSS,
   ANNAUTOTEXT_FILL_DIAGONALCROSS,
   ANNAUTOTEXT_FILL_FORWARDDIAGONAL,
   ANNAUTOTEXT_FILL_HORIZONTAL,
   ANNAUTOTEXT_FILL_VERTICAL,

   ANNAUTOTEXT_FILL_WINDING,
   ANNAUTOTEXT_FILL_ALTERNATE,

/*
   automation text dialog text
*/
   ANNAUTOTEXT_TEXT_CAPTION,
   ANNAUTOTEXT_TEXT_OK,
   ANNAUTOTEXT_TEXT_CANCEL,
   ANNAUTOTEXT_TEXT_APPLY,

/*
   automation audio file dialog text
*/
   ANNAUTOTEXT_AUDIOFILE_CAPTION,
   ANNAUTOTEXT_AUDIOFILE_FILTER,

/*
   automation stamp file dialog text
*/
   ANNAUTOTEXT_STAMPFILE_CAPTION,
   ANNAUTOTEXT_STAMPFILE_FILTER,

/*
   automation hotspot file dialog text
*/
   //ANNAUTOTEXT_HOTSPOTFILE_CAPTION,
   //ANNAUTOTEXT_HOTSPOTFILE_FILTER,

/*
   automation point file dialog text
*/
   ANNAUTOTEXT_POINTFILE_CAPTION,
   ANNAUTOTEXT_POINTFILE_FILTER,

/*
   automation audio file dialog text
*/
   ANNAUTOTEXT_VIDEOFILE_CAPTION,
   ANNAUTOTEXT_VIDEOFILE_FILTER,

/*
   automation pushpin file dialog text
*/
   ANNAUTOTEXT_PUSHPINFILE_CAPTION,
   ANNAUTOTEXT_PUSHPINFILE_FILTER,
   ANNAUTOTEXT_PUSHPINSECONDARYFILE_CAPTION,
   ANNAUTOTEXT_PUSHPINSECONDARYFILE_FILTER,

/*
   automation default item text
*/
   ANNAUTOTEXT_ITEM_DEFAULTTEXT,

/*
   automation ROP2 dialog text
*/
   ANNAUTOTEXT_ROP2_CAPTION,
   ANNAUTOTEXT_ROP2_TEXT,
   ANNAUTOTEXT_ROP2_OK,
   ANNAUTOTEXT_ROP2_CANCEL,
   ANNAUTOTEXT_ROP2_APPLY,
   ANNAUTOTEXT_ROP2_COPY,
   ANNAUTOTEXT_ROP2_AND,
   ANNAUTOTEXT_ROP2_XOR,

/*
   automation Lock dialog text
*/
   ANNAUTOTEXT_LOCK_CAPTION,
   ANNAUTOTEXT_LOCK_TEXT,
   ANNAUTOTEXT_LOCK_OK,
   ANNAUTOTEXT_LOCK_CANCEL,

/*
   automation Unlock dialog text
*/
   ANNAUTOTEXT_UNLOCK_CAPTION,
   ANNAUTOTEXT_UNLOCK_TEXT,
   ANNAUTOTEXT_UNLOCK_OK,
   ANNAUTOTEXT_UNLOCK_CANCEL,

/*
   automation Ruler dialog text
*/
   ANNAUTOTEXT_RULER_CAPTION,
   ANNAUTOTEXT_RULER_UNITS,
   ANNAUTOTEXT_RULER_ABBREV,
   ANNAUTOTEXT_RULER_PRECISION,
   ANNAUTOTEXT_RULER_LENGTH,
   ANNAUTOTEXT_RULER_OK,
   ANNAUTOTEXT_RULER_CANCEL,
   ANNAUTOTEXT_RULER_APPLY,

   ANNAUTOTEXT_RULER_INCHES,
   ANNAUTOTEXT_RULER_FEET,
   ANNAUTOTEXT_RULER_YARDS,
   ANNAUTOTEXT_RULER_MICROMETERS,
   ANNAUTOTEXT_RULER_MILIMETERS,
   ANNAUTOTEXT_RULER_CENTIMETERS,
   ANNAUTOTEXT_RULER_METERS,
   ANNAUTOTEXT_RULER_TWIPS,
   ANNAUTOTEXT_RULER_POINTS,
   ANNAUTOTEXT_RULER_PIXELS,

   ANNAUTOTEXT_RULER_SHOWLENGTH,
   ANNAUTOTEXT_RULER_SHOWGAUGE,

/*
   automation Nodes dialog text
*/
   ANNAUTOTEXT_NODES_CAPTION,
   ANNAUTOTEXT_NODES_DISPLAYNODES,
   ANNAUTOTEXT_NODES_GAP,
   ANNAUTOTEXT_NODES_OK,
   ANNAUTOTEXT_NODES_CANCEL,
   ANNAUTOTEXT_NODES_APPLY,

/*
   automation Protractor dialog text
*/
   ANNAUTOTEXT_PROTRACTOR_CAPTION,
   ANNAUTOTEXT_PROTRACTOR_ACUTE,
   ANNAUTOTEXT_PROTRACTOR_UNITS,
   ANNAUTOTEXT_PROTRACTOR_ABBREV,
   ANNAUTOTEXT_PROTRACTOR_PRECISION,
   ANNAUTOTEXT_PROTRACTOR_ARCRADIUS,
   ANNAUTOTEXT_PROTRACTOR_OK,
   ANNAUTOTEXT_PROTRACTOR_CANCEL,
   ANNAUTOTEXT_PROTRACTOR_APPLY,

   ANNAUTOTEXT_PROTRACTOR_DEGREES,
   ANNAUTOTEXT_PROTRACTOR_RADIANS,

   /*
   automation Name dialog text
   */
   ANNAUTOTEXT_NAME_CAPTION,
   ANNAUTOTEXT_NAME_SHOW,
   ANNAUTOTEXT_NAME_OFFSET,
   ANNAUTOTEXT_NAME_OFFSET_X,
   ANNAUTOTEXT_NAME_OFFSET_Y,
   ANNAUTOTEXT_NAME_RESTRICT,
   ANNAUTOTEXT_NAME_OK,
   ANNAUTOTEXT_NAME_CANCEL,
   ANNAUTOTEXT_NAME_APPLY,

/*
   automation default item text
*/
   ANNAUTOTEXT_ITEM_DEFAULTNAME,

/*
   automation Play Video dialog text
*/
   ANNAUTOTEXT_PLAYVIDEO_CAPTION,
   ANNAUTOTEXT_PLAYVIDEO_BALANCE,
   ANNAUTOTEXT_PLAYVIDEO_VOLUME,
   ANNAUTOTEXT_PLAYVIDEO_SPEED,

   ANNAUTOTEXT_PLAYVIDEO_TIP_PLAY,
   ANNAUTOTEXT_PLAYVIDEO_TIP_PAUSE,
   ANNAUTOTEXT_PLAYVIDEO_TIP_STOP,
   ANNAUTOTEXT_PLAYVIDEO_TIP_REWIND,
   ANNAUTOTEXT_PLAYVIDEO_TIP_FORWARD,
   ANNAUTOTEXT_PLAYVIDEO_TIP_PREVMARK,
   ANNAUTOTEXT_PLAYVIDEO_TIP_NEXTMARK,
   ANNAUTOTEXT_PLAYVIDEO_TIP_NEXTFRAME,
   ANNAUTOTEXT_PLAYVIDEO_TIP_PREVFRAME,
   ANNAUTOTEXT_PLAYVIDEO_TIP_STARTSEL,
   ANNAUTOTEXT_PLAYVIDEO_TIP_ENDSEL,

/*
   automation stamp metafile dialog text
*/
   ANNAUTOTEXT_STAMPMETAFILE_CAPTION,
   ANNAUTOTEXT_STAMPMETAFILE_FILTER,

/*
   automation hotspot metafile dialog text
*/
   ANNAUTOTEXT_HOTSPOTMETAFILE_CAPTION,
   ANNAUTOTEXT_HOTSPOTMETAFILE_FILTER,

/*
   toolbar buttons tooltip text
*/
   ANNAUTOTEXT_TOOLTIP_SELECT,
   ANNAUTOTEXT_TOOLTIP_LINE,
   ANNAUTOTEXT_TOOLTIP_RECT,
   ANNAUTOTEXT_TOOLTIP_ELLIPSE,
   ANNAUTOTEXT_TOOLTIP_POLYLINE,
   ANNAUTOTEXT_TOOLTIP_POLYGON,
   ANNAUTOTEXT_TOOLTIP_POINTER,
   ANNAUTOTEXT_TOOLTIP_FREEHAND,
   ANNAUTOTEXT_TOOLTIP_HILITE,
   ANNAUTOTEXT_TOOLTIP_REDACT,
   ANNAUTOTEXT_TOOLTIP_TEXT,
   ANNAUTOTEXT_TOOLTIP_NOTE,
   ANNAUTOTEXT_TOOLTIP_STAMP,
   ANNAUTOTEXT_TOOLTIP_RUBBERSTAMP,
   ANNAUTOTEXT_TOOLTIP_HOTSPOT,
   ANNAUTOTEXT_TOOLTIP_FREEHANDHOTSPOT,
   ANNAUTOTEXT_TOOLTIP_AUDIO,
   ANNAUTOTEXT_TOOLTIP_BUTTON,
   ANNAUTOTEXT_TOOLTIP_RULER,
   ANNAUTOTEXT_TOOLTIP_CROSSPRODUCT,
   ANNAUTOTEXT_TOOLTIP_POINT,
   ANNAUTOTEXT_TOOLTIP_PROTRACTOR,
   ANNAUTOTEXT_TOOLTIP_VIDEO,
   ANNAUTOTEXT_TOOLTIP_PUSHPIN,

/*
   automation transparent color dialog text
*/
   ANNAUTOTEXT_TRANSPARENTCOLOR_CAPTION,
   ANNAUTOTEXT_TRANSPARENTCOLOR_COLORARRAYFRAME,
   ANNAUTOTEXT_TRANSPARENTCOLOR_CURRENTCOLORFRAME,
   ANNAUTOTEXT_TRANSPARENTCOLOR_COLOR,
   ANNAUTOTEXT_TRANSPARENTCOLOR_RED,
   ANNAUTOTEXT_TRANSPARENTCOLOR_GREEN,
   ANNAUTOTEXT_TRANSPARENTCOLOR_BLUE,
   ANNAUTOTEXT_TRANSPARENTCOLOR_OK,
   ANNAUTOTEXT_TRANSPARENTCOLOR_CANCEL,

/*
   automation capture file dialog text
*/
   ANNAUTOTEXT_CAPTUREFILE_CAPTION,
   ANNAUTOTEXT_CAPTUREFILE_FILTER,

/*
   automation capture dialog text
*/
   ANNAUTOTEXT_CAPTUREWINDOW_CAPTION,
   ANNAUTOTEXT_CAPTURE_CAPTION,
   ANNAUTOTEXT_CAPTURE_CAPTUREDRIVERS,
   ANNAUTOTEXT_CAPTURE_VIDEODIALOGS,
   ANNAUTOTEXT_CAPTURE_VIDEOFORMAT,
   ANNAUTOTEXT_CAPTURE_VIDEODISPLAY,
   ANNAUTOTEXT_CAPTURE_VIDEOSOURCE,
   ANNAUTOTEXT_CAPTURE_VIDEOCOMPRESSION,
   ANNAUTOTEXT_CAPTURE_DISPLAYMODE,
   ANNAUTOTEXT_CAPTURE_NONE,
   ANNAUTOTEXT_CAPTURE_NONEOVERLAY,
   ANNAUTOTEXT_CAPTURE_PREVIEW,
   ANNAUTOTEXT_CAPTURE_PREVIEWFRAMESPERSEC,
   ANNAUTOTEXT_CAPTURE_OPTIONS,
   ANNAUTOTEXT_CAPTURE_TIMELIMIT,
   ANNAUTOTEXT_CAPTURE_CAPTUREFRAMESPERSEC,
   ANNAUTOTEXT_CAPTURE_STARTCAPTURE,
   ANNAUTOTEXT_CAPTURE_ENDCAPTURE,
   ANNAUTOTEXT_CAPTURE_FRAMESCAPTURED,
   ANNAUTOTEXT_CAPTURE_AUDIOOPTIONS,
   ANNAUTOTEXT_CAPTURE_CAPTUREAUDIO,
   ANNAUTOTEXT_CAPTURE_SYNCAUDIO,
   ANNAUTOTEXT_CAPTURE_CAPTUREFILE,
   ANNAUTOTEXT_CAPTURE_BROWSE,
   ANNAUTOTEXT_CAPTURE_FILESIZE,
   ANNAUTOTEXT_CAPTURE_OK,
   ANNAUTOTEXT_CAPTURE_CANCEL,

   ANNAUTOTEXT_CAPTURE_WAV_1M08,
   ANNAUTOTEXT_CAPTURE_WAV_1S08,
   ANNAUTOTEXT_CAPTURE_WAV_1M16,
   ANNAUTOTEXT_CAPTURE_WAV_1S16,
   ANNAUTOTEXT_CAPTURE_WAV_2M08,
   ANNAUTOTEXT_CAPTURE_WAV_2S08,
   ANNAUTOTEXT_CAPTURE_WAV_2M16,
   ANNAUTOTEXT_CAPTURE_WAV_2S16,
   ANNAUTOTEXT_CAPTURE_WAV_4M08,
   ANNAUTOTEXT_CAPTURE_WAV_4S08,
   ANNAUTOTEXT_CAPTURE_WAV_4M16,
   ANNAUTOTEXT_CAPTURE_WAV_4S16,
   
   ANNAUTOTEXT_CAPTURE_DEFAULTNAME,
   ANNAUTOTEXT_CAPTURE_NODRIVERS,

   ANNAUTOTEXT_DIALOG_FONT,

   ANNAUTOTEXT_MAX,
};


#define ANNMENU_DISABLED   0
#define ANNMENU_ENABLED    1
#define ANNMENU_DEFAULT    2

/*
   save/clipboard formats
*/
#define ANNFMT_NATIVE   0
#define ANNFMT_WMF      1
#define ANNFMT_ENCODED  4     /* Encoded native format (better security, smaller file size) */

/*
   data structures
*/
typedef struct _ANNPOINT
{
   L_DOUBLE x;
   L_DOUBLE y;
} ANNPOINT, L_FAR *pANNPOINT;


typedef struct _ANNRECT
{
   L_DOUBLE left;
   L_DOUBLE top;
   L_DOUBLE right;
   L_DOUBLE bottom;
} ANNRECT, L_FAR *pANNRECT;

typedef struct _ANNTOOL
{
   L_UINT         uTool;
   L_INT          nMenuTextID;          // used if uMenuTextID >= 0
   L_TCHAR L_FAR*  pMenuText;            // used if uMenuTextID == -1
} ANNTOOL, L_FAR*pANNTOOL;


typedef struct _ANNBUTTON
{
   L_UINT         uFlags;

   L_UINT         uTool;

   L_UINT         uToolCount;
   pANNTOOL       pTools;

   pBITMAPHANDLE  pBitmapUp;
   pBITMAPHANDLE  pBitmapDown;
#ifdef WIN32
   L_INT          nToolTipTextID;       // used if uToolTipTextID >= 0
   L_TCHAR L_FAR*  pToolTipText;         // used if uToolTipTextID == -1
#endif
} ANNBUTTON, L_FAR*pANNBUTTON;


typedef struct _ANNTOOLBARINFO
{
   L_UINT   uButtons;
   L_UINT   uRows;
   L_UINT   uColumns;
} ANNTOOLBARINFO, L_FAR*pANNTOOLBARINFO;
#define LTANNEVENT_LBUTTONDOWN   17

/*
   ROP2 values
*/
#define ANNROP2_COPY          0
#define ANNROP2_AND           1
#define ANNROP2_XOR           2

/*
   Hyperlink types
*/
#define ANNLINK_NONE          0
#define ANNLINK_LTANNEVENT    1
#define ANNLINK_USERMSG       2
#define ANNLINK_RUN           3
#define ANNLINK_WEBPAGE       4
#define ANNUNIT_FEET          1
#define ANNUNIT_YARDS         2
#define ANNUNIT_MICROMETERS   3
#define ANNUNIT_MILIMETERS    4
#define ANNUNIT_CENTIMETERS   5
#define ANNUNIT_METERS        6
#define ANNUNIT_TWIPS         7
#define ANNUNIT_POINTS        8
#define ANNUNIT_PIXELS        9

/*
   object handle
*/
typedef HANDLE HANNOBJECT;


/*
   structure passed to the mouse notifications
*/

typedef struct _ANNMOUSEPOS
{
   L_BOOL   fDoubleClick;  /* valid only for LTANNEVENT_LBUTTONDOWN */
   POINT    pt;
   L_UINT   uKeyFlags;
   L_BOOL   fUpdatePos;    /* if TRUE, the mouse cursor is updated */
} ANNMOUSEPOS, L_FAR*pANNMOUSEPOS;

typedef enum tagANNCHANGETYPE
{
   ANNCHANGE_DELETE,       // the object is being deleted
   ANNCHANGE_ROTATE,       // the object is being rotated
} ANNCHANGETYPE, L_FAR*pANNCHANGETYPE;


typedef struct tagANNCHANGEPARAM
{
   L_INT          nSize;            // size of this structure
   HANNOBJECT     hObject;          // object being changed.
   ANNCHANGETYPE  uChange;          // the type of change being performed
   L_INT          nChange;          // set to TRUE to allow the modification, set to FALSE to disable it
   L_DOUBLE       dAngle;           // valid if the object is being rotated
} ANNCHANGEPARAM, L_FAR*pANNCHANGEPARAM;



typedef struct tagANNFILEINFO
{
   L_INT32     nSize;
   L_INT32     nOffset;
   L_INT32     nVersion;
   L_UINT      uFormat;          //ANNFMT_NATIVE,ANNFMT_WMF	,ANNFMT_ENCODED   
   L_INT32     nTotalPages;
   L_INT32     nReserved;
} ANNFILEINFO, L_FAR*pANNFILEINFO;



/*
   callback typedefs
*/
typedef L_INT (pEXT_CALLBACK ANNENUMCALLBACK) (HANNOBJECT hObject, L_VOID L_FAR * pUserData);