TRiAS/Framework/LeadTools/Include/l_ocxann.bas


'   automation capture dialog text
Global Const ANNAUTOTEXT_CAPTUREWINDOW_CAPTION = 257
Global Const ANNAUTOTEXT_CAPTURE_CAPTION = 258
Global Const ANNAUTOTEXT_CAPTURE_CAPTUREDRIVERS = 259
Global Const ANNAUTOTEXT_CAPTURE_VIDEODIALOGS = 260
Global Const ANNAUTOTEXT_CAPTURE_VIDEOFORMAT = 261
Global Const ANNAUTOTEXT_CAPTURE_VIDEODISPLAY = 262
Global Const ANNAUTOTEXT_CAPTURE_VIDEOSOURCE = 263
Global Const ANNAUTOTEXT_CAPTURE_VIDEOCOMPRESSION = 264
Global Const ANNAUTOTEXT_CAPTURE_DISPLAYMODE = 265
Global Const ANNAUTOTEXT_CAPTURE_NONE = 266
Global Const ANNAUTOTEXT_CAPTURE_NONEOVERLAY = 267
Global Const ANNAUTOTEXT_CAPTURE_PREVIEW = 268
Global Const ANNAUTOTEXT_CAPTURE_PREVIEWFRAMESPERSEC = 269
Global Const ANNAUTOTEXT_CAPTURE_OPTIONS = 270
Global Const ANNAUTOTEXT_CAPTURE_TIMELIMIT = 271
Global Const ANNAUTOTEXT_CAPTURE_CAPTUREFRAMESPERSEC = 272
Global Const ANNAUTOTEXT_CAPTURE_STARTCAPTURE = 273
Global Const ANNAUTOTEXT_CAPTURE_ENDCAPTURE = 274
Global Const ANNAUTOTEXT_CAPTURE_FRAMESCAPTURED = 275
Global Const ANNAUTOTEXT_CAPTURE_AUDIOOPTIONS = 276
Global Const ANNAUTOTEXT_CAPTURE_CAPTUREAUDIO = 277
Global Const ANNAUTOTEXT_CAPTURE_SYNCAUDIO = 278
Global Const ANNAUTOTEXT_CAPTURE_CAPTUREFILE = 279
Global Const ANNAUTOTEXT_CAPTURE_BROWSE = 280
Global Const ANNAUTOTEXT_CAPTURE_FILESIZE = 281
Global Const ANNAUTOTEXT_CAPTURE_OK = 282
Global Const ANNAUTOTEXT_CAPTURE_CANCEL = 283

Global Const ANNAUTOTEXT_CAPTURE_WAV_1M08 = 284
Global Const ANNAUTOTEXT_CAPTURE_WAV_1S08 = 285
Global Const ANNAUTOTEXT_CAPTURE_WAV_1M16 = 286
Global Const ANNAUTOTEXT_CAPTURE_WAV_1S16 = 287
Global Const ANNAUTOTEXT_CAPTURE_WAV_2M08 = 288
Global Const ANNAUTOTEXT_CAPTURE_WAV_2S08 = 289
Global Const ANNAUTOTEXT_CAPTURE_WAV_2M16 = 290
Global Const ANNAUTOTEXT_CAPTURE_WAV_2S16 = 291
Global Const ANNAUTOTEXT_CAPTURE_WAV_4M08 = 292
Global Const ANNAUTOTEXT_CAPTURE_WAV_4S08 = 293
Global Const ANNAUTOTEXT_CAPTURE_WAV_4M16 = 294
Global Const ANNAUTOTEXT_CAPTURE_WAV_4S16 = 295

Global Const ANNAUTOTEXT_CAPTURE_DEFAULTNAME = 296
Global Const ANNAUTOTEXT_CAPTURE_NODRIVERS = 297

Global Const ANNAUTOTEXT_DIALOG_FONT = 298
Global Const ANNAUTOTEXT_MAX = 298

Global Const ANNMENU_DISABLED = 0
Global Const ANNMENU_ENABLED = 1
Global Const ANNMENU_DEFAULT = 2

'   ROP2 values
Global Const ANNROP2_COPY = 0
Global Const ANNROP2_AND = 1
Global Const ANNROP2_XOR = 2

'   Hyperlink types
Global Const ANNLINK_NONE = 0
Global Const ANNLINK_LTANNEVENT = 1
Global Const ANNLINK_USERMSG = 2
Global Const ANNLINK_RUN = 3
Global Const ANNLINK_WEBPAGE = 4

'distance units
Global Const ANNUNIT_INCH = 0
Global Const ANNUNIT_FEET = 1
Global Const ANNUNIT_YARDS = 2
Global Const ANNUNIT_MICROMETERS = 3
Global Const ANNUNIT_MILIMETERS = 4
Global Const ANNUNIT_CENTIMETERS = 5
Global Const ANNUNIT_METERS = 6
Global Const ANNUNIT_TWIPS = 7
Global Const ANNUNIT_POINTS = 8
Global Const ANNUNIT_PIXELS = 9

' Annotation structures
Type ANNPOINT
   x As Double
   y As Double
End Type

Type ANNRECT
   left As Double
   top As Double
   right As Double
   bottom As Double
End Type

Type ANNTOOL
   uTool As Long
   nMenuTextID As Long          ' used if uMenuTextID >= 0
   pMenuText As Long               ' used if uMenuTextID == -1
End Type

Type ANNBUTTON
   uFlags As Long
   uTool As Long
   uToolCount As Long
   pTools As Long

   pBitmapUp As Long
   pBitmapDown As Long
   nToolTipTextID As Long       ' used if uToolTipTextID >= 0
   pToolTipText As Long            ' used if uToolTipTextID == -1
End Type

Type ANNTOOLBARINFO
   uButtons As Long
   uRows As Long
   uColumns As Long
End Type

'   structure passed to the mouse notifications
Type ANNMOUSEPOS
   fDoubleClick As Boolean  ' valid only for LTANNEVENT_LBUTTONDOWN
   pt As POINT
   uKeyFlags As Long
   fUpdatePos As Boolean    ' if TRUE, the mouse cursor is updated
End Type

'   defines and structures that describe parameter for LTANNEVENT_AUTOCHANGING notification event
Type ANNCHANGEPARAM
   nSize As Long
   hObject As Long          ' object being changed.
   uChange As Long          ' the type of change being performed
   nChange As Long          ' set to TRUE to allow the modification, set to FALSE to disable it
   dAngle As Double         ' valid if the object is being rotated
End Type

Type ANNFILEINFO
   nSize As Long
   nOffset As Long
   nVersion As Long
   uFormat As Long          ' ANNFMT_NATIVE, ANNFMT_WMF, ANNFMT_ENCODED
   nTotalPages As Long
   nReserved As Long
End Type

' Functions in LTANN DLL
